# Stellar-Game-Studio

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  ZK_UNO_DEVELOPMENT.md  package.json
contracts/mock-risc0-verifier/: Cargo.toml
contracts/mock-risc0-verifier/src/: lib.rs
contracts/zk-uno/: Cargo.toml  README.md
contracts/zk-uno/src/: lib.rs  test.rs
docs/: index.html
docs/assets/: index-B9a1u_n1.js  index-CVq8ngX6.js  index-XqK6wxI9.css
scripts/: publish.ts  setup-verifier.ts
scripts/prover-server/: Cargo.toml
scripts/prover-server/src/: main.rs
sgs_frontend/: package.json
sgs_frontend/src/components/: GamesCatalog.tsx
sgs_frontend/src/games/number-guess/: NumberGuessGame.tsx
sgs_frontend/src/games/zk-uno/: ZkUnoGame.tsx  bindings.ts  zkUnoService.ts
sgs_frontend/src/utils/: constants.ts
template_frontend/: ARCHITECTURE.md  package.json
template_frontend/src/: App.tsx
template_frontend/src(gamebackend)/app/: globals.css
template_frontend/src(gamebackend)/components/: DiscardPile.tsx  GameBoard.tsx  Hand.tsx  Lobby.tsx
template_frontend/src(gamebackend)/hooks/: useGame.ts  useWallet.ts
template_frontend/src(gamebackend)/lib/: zkUnoService.ts
template_frontend/src/components/: GridMotion.tsx
template_frontend/src/games/number-guess/: NumberGuessGame.tsx
template_frontend/src/lib/: bindings.ts  config.ts  ledgerUtils.ts  zkUnoService.ts
template_frontend/src/pages/: GamePage.tsx  LandingPage.tsx
template_frontend/src/services/: roomService.ts
zk-uno-frontend/: index.html  package.json
zk-uno-frontend/public/: game-studio-config.js
zk-uno-frontend/src/: App.tsx  config.ts
zk-uno-frontend/src/games/zk-uno/: ZkUnoGame.tsx
zk-uno-frontend/src/utils/: constants.ts
zk-uno-guest/: Cargo.toml
zk-uno-guest/.cargo/: config.toml
zk-uno-guest/src/: draw_main.rs  main.rs  move_main.rs  uno_main.rs
zk-uno-nextjs/: .gitignore  ARCHITECTURE.md  next.config.js  package.json  tailwind.config.js
zk-uno-nextjs/src/app/: globals.css  layout.tsx  page.tsx
zk-uno-nextjs/src/app/game/[sessionId]/: page.tsx
zk-uno-nextjs/src/components/: Card.tsx  GameBoard.tsx  GridMotion.tsx  WalletButton.tsx
zk-uno-nextjs/src/hooks/: useGame.ts
zk-uno-nextjs/src/lib/: cardImages.ts  config.ts  wallet.ts  zkUnoService.ts
