[workspace]

[package]
name = "zk-uno-prover"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zk-uno-prover"
path = "src/main.rs"

[dependencies]
# HTTP server
axum            = { version = "0.7", features = ["json"] }
tokio           = { version = "1", features = ["full"] }
tower-http      = { version = "0.5", features = ["cors"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
hex             = "0.4"
sha2            = "0.10"
tiny-keccak     = { version = "2.0", features = ["keccak"] }
anyhow          = "1"

# RISC Zero host execution (no GPU needed — just runs the guest deterministically)
# The `prove` feature enables STARK proof generation (optional, needed for Bonsai mode).
risc0-zkvm      = { version = "^3.0.5" }
